...
    <string name="screen_tutorial">"Tutorial"</string>
    <string name="screen_badges">"Badges"</string>
    <string name="appearance_system">"System"</string>
    <string name="appearance_light">"Light"</string>
    <string name="appearance_dark">"Dark"</string>
    <string name="avatar_sun">"Sun"</string>
    <string name="avatar_mango">"Mango"</string>
    <string name="avatar_chai">"Chai"</string>
    <string name="avatar_peacock">"Peacock"</string>
    <string name="avatar_lotus">"Lotus"</string>
    <string name="avatar_ladoo">"Ladoo"</string>
    <string name="avatar_kite">"Kite"</string>
    <string name="avatar_moon">"Moon"</string>
...
